--- a/config/west.yml
+++ b/config/west.yml
@@ -2,15 +2,20 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: goyakey58
-      url-base: https://github.com/goyakey58
+    - name: kureyakey
+      url-base: https://github.com/kureyakey
+    - name: caksoylar  # <-- new entry
+      url-base: https://github.com/caksoylar  
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v0.2.1
       import: app/west.yml
     - name: zmk-pmw3610-driver
-      remote: goyakey58
+      remote: kureyakey
+      revision: main
+    - name: zmk-rgbled-widget  # <-- new entry
+      remote: caksoylar
       revision: main
   self:
     path: config
