--- a/config/boards/shields/zonkey/zonkey.dtsi
+++ b/config/boards/shields/zonkey/zonkey.dtsi
@@ -6,6 +6,64 @@
         zmk,matrix_transform = &default_transform;
     };
 
+        zonkey_physical_layout: roba_physical_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "Default";
+        transform = <&default_transform>;
+        kscan = <&kscan0>;
+
+        keys = <
+            &key_physical_attrs 100 100   25    0       0     0     0
+            &key_physical_attrs 100 100  125    0       0     0     0
+            &key_physical_attrs 100 100  225    0       0     0     0
+            &key_physical_attrs 100 100  325    0       0     0     0
+            &key_physical_attrs 100 100  425    0       0     0     0
+
+            &key_physical_attrs 100 100  825    0       0     0     0
+            &key_physical_attrs 100 100  925    0       0     0     0
+            &key_physical_attrs 100 100 1025    0       0     0     0
+            &key_physical_attrs 100 100 1125    0       0     0     0
+            &key_physical_attrs 100 100 1225    0       0     0     0
+
+            &key_physical_attrs 125 100   50   100       0     0     0
+            &key_physical_attrs 100 100  150   100       0     0     0
+            &key_physical_attrs 100 100  250   100       0     0     0
+            &key_physical_attrs 100 100  350   100       0     0     0
+            &key_physical_attrs 100 100  450   100       0     0     0
+
+            &key_physical_attrs 100 100  850   100       0     0     0
+            &key_physical_attrs 100 100  950   100       0     0     0
+            &key_physical_attrs 100 100 1050   100       0     0     0
+            &key_physical_attrs 100 100 1150   100       0     0     0
+            &key_physical_attrs 100 100 1250   100       0     0     0
+
+            &key_physical_attrs 100 100    0   200       0     0     0
+            &key_physical_attrs 100 100  100   200       0     0     0
+            &key_physical_attrs 100 100  200   200       0     0     0
+            &key_physical_attrs 100 100  300   200       0     0     0
+            &key_physical_attrs 100 100  400   200       0     0     0
+            &key_physical_attrs 100 100  500   200       0     0     0
+            &key_physical_attrs 100 100  600   250       0     0     0
+            &key_physical_attrs 100 100  700   250       0     0     0
+            &key_physical_attrs 100 100  800   200       0     0     0
+            &key_physical_attrs 100 100  900   200       0     0     0
+            &key_physical_attrs 100 100 1000   200       0     0     0
+            &key_physical_attrs 125 100 1100   200       0     0     0
+            &key_physical_attrs 100 100 1200   200       0     0     0
+            &key_physical_attrs 125 100 1300   200       0     0     0
+
+            &key_physical_attrs 100 100    0   300       0     0     0
+            &key_physical_attrs 100 100  100   300       0     0     0
+            &key_physical_attrs 100 100  200   300       0     0     0
+            &key_physical_attrs 100 100  325   337       0     0     0
+            &key_physical_attrs 100 100  437   350  1000   437   350
+            &key_physical_attrs 100 100  550   387  2000   550   387
+            &key_physical_attrs 100 100  750   387 (-2000)  650   387
+            &key_physical_attrs 100 100  863   350 (-1000)   0   350
+            &key_physical_attrs 100 100 1300   300       0     0   0
+        >;
+    };
+
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <11>;
