--- a/config/boards/shields/zonkey/zonkey.dtsi
+++ b/config/boards/shields/zonkey/zonkey.dtsi
@@ -6,7 +6,7 @@
         zmk,physical-layout = &roba_physical_layout;
     };
 
-        zonkey_physical_layout: roba_physical_layout {
+        zonkey_physical_layout: zonkey_physical_layout {
         compatible = "zmk,physical-layout";
         display-name = "Default";
         transform = <&default_transform>;
