--- a/config/west.yml
+++ b/config/west.yml
@@ -1,26 +1,21 @@
 manifest:
-  version: 0.13
-
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: kureyakey
       url-base: https://github.com/kureyakey
-
-  defaults:
-    remote: zmkfirmware
-    revision: v0.3-branch
-
+    - name: caksoylar  # <-- new entry
+      url-base: https://github.com/caksoylar  
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: v0.3-branch
       import: app/west.yml
-
     - name: zmk-pmw3610-driver
       remote: kureyakey
       revision: main
-      path: modules/zmk-pmw3610-driver
-
+    - name: zmk-rgbled-widget  # <-- new entry
+      remote: caksoylar
+      revision: main
   self:
     path: config
