--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -30,6 +30,8 @@ CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
 CONFIG_PMW3610_FORCE_AWAKE=y
 CONFIG_PMW3610_POLLING_RATE_250=y
 CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=0
+
+CONFIG_PMW3610_MOVEMENT_THRESHOLD=0
 CONFIG_PMW3610_SMART_ALGORITHM=y
 
 
@@ -39,6 +41,5 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_BT_BAS=y
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
