--- a/config/west.yml
+++ b/config/west.yml
@@ -12,5 +12,10 @@ manifest:
     - name: zmk-pmw3610-driver
       remote: kureyakey
       revision: main
-  self:
+     - name: zmk-rgbled-widget
+      remote: kureyakey
+      revision: main
+      path: zmk-rgbled-widget
+      
+    self:
     path: config
