--- a/config/west.yml
+++ b/config/west.yml
@@ -4,18 +4,18 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: kureyakey
       url-base: https://github.com/kureyakey
+    - name: caksoylar  # <-- new entry
+      url-base: https://github.com/caksoylar  
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: v0.3-branch
+      revision: v0.2.1
       import: app/west.yml
     - name: zmk-pmw3610-driver
       remote: kureyakey
       revision: main
-     - name: zmk-rgbled-widget
-      remote: kureyakey
+    - name: zmk-rgbled-widget  # <-- new entry
+      remote: caksoylar
       revision: main
-      path: zmk-rgbled-widget
-      
-    self:
+  self:
     path: config
