--- a/config/west.yml
+++ b/config/west.yml
@@ -6,19 +6,24 @@ manifest:
       url-base: https://github.com/kureyakey
     - name: caksoylar
       url-base: https://github.com/caksoylar
-    - name: tkk00 # 新しいリモート
+    - name: tkk00
       url-base: https://github.com/tkk00
+    - name: kot149
+      url-base: https://github.com/kot149
 
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: v0.2.1
       import: app/west.yml
-    - name: zmk-pmw3610-driver # ここを変更
+    - name: zmk-pmw3610-driver
       remote: tkk00
       revision: scroll-acceleration-feature
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
+    - name: zmk-scroll-snap
+      remote: kot149
+      revision: v1
   self:
     path: config
